[tool.poetry]
name = "test-streamlit-analytics"
version = "0.1.0"
description = ""
authors = ["yordankitov <yordankitov@infinitelambda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.26.1"
pandas = "^2.1.2"
altair = "^5.1.2"
joblib = "^1.3.2"
streamlit = "^1.28.0"
streamlit-multipage = "0.0.17"
yfinance = "^0.2.31"
scipy = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

